--- a/www/tevree.html
+++ b/www/tevree.html
@@ -6,24 +6,30 @@
     <title>Title</title>
     <link rel="import" href="app/bower_components/google-youtube/google-youtube.html">
     <style>
-        google-youtube{
+        google-youtube {
             border-radius: 5%;
         }
 
-        div[video]{
-            width:25vw;
-            height:20vw;
+        div[video] {
+            width: 25vw;
+            height: 20vw;
             display: inline-block;
-            margin:3rem;
+            margin: 3rem;
         }
-        #gyt1{
-            border:1em solid red;
+
+        #gyt1 {
+            border: 1em solid red;
         }
-        #gyt2{
-            border:1em solid green;
+
+        #gyt2 {
+            border: 1em solid green;
         }
-        #gyt3{
-            border:1em solid blue;
+
+        #gyt3 {
+            border: 1em solid blue;
+        }
+        #gyt4 {
+            border: 1em solid yellow;
         }
     </style>
     <script>
@@ -61,7 +67,7 @@
 
                             }
                         )
-                        gyt.videoId=playlist.shift();
+                        gyt.videoId = playlist.shift();
                         playlist.push(gyt.videoId);
                     });
                 }
@@ -79,41 +85,37 @@
                 // Test that the element's state property always is set to the same property in the event.
                 state = e.detail.data;
                 console.log(JSON.stringify(e));
-                if (state ===0){
-                    gyt.videoId=playlist.shift();
+                if (state === 0) {
+                    gyt.videoId = playlist.shift();
                     playlist.push(gyt.videoId);
                 }
             });
         }
     </script>
 </head>
-<body onload="init()" >
+<body onload="init()">
 <div video>
-<google-youtube
-        id="gyt1"
-        video-id=""
-        height="270px"
-        width="400px"
-        rel="0"
-        start="5"
-        autoplay="1">
-</google-youtube>
+    <google-youtube id="gyt1" video-id="" height="270px" width="400px" rel="0" start="5" autoplay="1"></google-youtube>
 </div>
 <div video>
-<google-youtube
-        id="gyt2"
-        video-id="_hLA7wTWdlQ"
-        height="270px"
-        width="400px"
-        rel="0"
-        start="5"
-        autoplay="1">
-</google-youtube>
+    <google-youtube id="gyt2" video-id="_hLA7wTWdlQ" height="270px" width="400px" rel="0" start="5" autoplay="1">
+    </google-youtube>
 </div>
 <div video>
     <google-youtube
             id="gyt3"
             video-id="1i2yokldO8s"
+            height="270px"
+            width="400px"
+            rel="0"
+            start="5"
+            autoplay="1">
+    </google-youtube>
+</div>
+<div video>
+    <google-youtube
+            id="gyt3"
+            video-id=""
             height="270px"
             width="400px"
             rel="0"
