--- a/www/tevree.html
+++ b/www/tevree.html
@@ -109,6 +109,9 @@
     </div>
     <br>
     <button accesskey="s" style="background-color: red" onclick="vergroot('gyt1')">1</button>
+    <button accesskey="s" style="background-color: green" onclick="vergroot('gyt2')">2</button>
+    <button accesskey="s" style="background-color: blue;color:white" onclick="vergroot('gyt3')">3</button>
+    <button accesskey="s" style="background-color: yellow" onclick="vergroot('gyt4')">4</button>
     <button accesskey="s" style="background-color: silver" onclick="verklein()">stop</button>
 </div>
 </body>
