--- a/www/tevree.html
+++ b/www/tevree.html
@@ -45,15 +45,24 @@
             border: 1em solid blue;
         }
 
-        #gyt4 {
-            border: 1em solid yellow;
-        }
 
         [kalender],[facebook],[kaart]{
-            border: 1em solid gold;
+            border-width: 1em;
+            border-style: solid;
             width:20vw;
             height:15vw;
         }
+
+        [kaart]{
+            border-color: yellow;
+        }
+        [kalender]{
+            border-color: deepskyblue;
+        }
+        [facebook]{
+            border-color: purple;
+        }
+
         div[left] img {
             width:15vw;
         }
@@ -96,17 +105,17 @@
         </google-youtube>
     </div>
     <div video>
-        <iframe kaart src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9850.808397553594!2d4.499738780192921!3d51.88465017358614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c433a50edc0527%3A0xe5f7ac13416a6e74!2sVreewijk%2C+Rotterdam!5e0!3m2!1sen!2snl!4v1481895831274" frameborder="0"  allowfullscreen></iframe>
+        <iframe id="content0" kaart src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9850.808397553594!2d4.499738780192921!3d51.88465017358614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c433a50edc0527%3A0xe5f7ac13416a6e74!2sVreewijk%2C+Rotterdam!5e0!3m2!1sen!2snl!4v1481895831274" frameborder="0"  allowfullscreen></iframe>
     </div>
     <div video>
-        <iframe kalender
-                src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=1&amp;hl=nl&amp;bgcolor=%2333ff33&amp;src=teevree24%40gmail.com&amp;color=%231B887A&amp;ctz=Europe%2FAmsterdam"
+        <iframe id="content1" kalender
+                src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=1&amp;hl=nl&amp;bgcolor=white&amp;src=teevree24%40gmail.com&amp;color=%231B887A&amp;ctz=Europe%2FAmsterdam"
                 frameborder="0" scrolling="no">
 
         </iframe>
     </div>
     <div video>
-        <iframe facebook
+        <iframe id="content2" facebook
                 src="img/likejewijk.png"
                 frameborder="0" scrolling="no">
 
@@ -114,11 +123,14 @@
     </div>
     <br>
     <br>
-    <button accesskey="s" style="background-color: red" onclick="vergroot('gyt1')">1</button>
-    <button accesskey="s" style="background-color: green" onclick="vergroot('gyt2')">2</button>
-    <button accesskey="s" style="background-color: blue;color:white" onclick="vergroot('gyt3')">3</button>
-    <button accesskey="s" style="background-color: yellow" onclick="vergroot('gyt4')">4</button>
-    <button accesskey="s" style="background-color: silver" onclick="verklein()">stop</button>
+    <button accesskey="s" style="background-color: red" onclick="vergrootVideo('gyt1')">1</button>
+    <button accesskey="s" style="background-color: green" onclick="vergrootVideo('gyt2')">2</button>
+    <button accesskey="s" style="background-color: blue;color:white" onclick="vergrootVideo('gyt3')">3</button>
+    <button accesskey="s" style="background-color: yellow" onclick="vergrootIframe('content0')">4</button>
+    <button accesskey="s" style="background-color: deepskyblue" onclick="vergrootIframe('content1')">5</button>
+    <button accesskey="s" style="background-color: purple" onclick="vergrootIframe('content2')">6</button>
+
+    <button accesskey="s" style="background-color: silver" onclick="verkleinVideo();verkleinIframe()">stop</button>
 </div>
 </body>
 </html>
