--- a/www/tevree.html
+++ b/www/tevree.html
@@ -115,14 +115,15 @@
         </iframe>
     </div>
     <div video>
-        <iframe id="content2" facebook
-                src="img/likejewijk.png"
-                frameborder="0" scrolling="no">
+        <!--<iframe id="content2" facebook-->
+                <!--src="img/likejewijk.png"-->
+                <!--frameborder="0" scrolling="no">-->
 
-        </iframe>
+        <!--</iframe>-->
+        <iframe id="content2" facebook src="https://www.youtube.com/embed/fAtHNKdzD0M?autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
     </div>
     <br>
-    <br>
+    <br>&nbsp;
     <button accesskey="s" style="background-color: red" onclick="vergrootVideo('gyt1')">1</button>
     <button accesskey="s" style="background-color: green" onclick="vergrootVideo('gyt2')">2</button>
     <button accesskey="s" style="background-color: blue;color:white" onclick="vergrootVideo('gyt3')">3</button>
